--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,12 @@
 {
-    "require": {
+    "require":
+    {
         "twig/twig": "1.31.*"
     },
-    "autoload": {
-        "psr-4": {
+    "autoload":
+    {
+        "psr-4":
+        {
             "aitsydney\\" : "classes/"
         }
     }
