--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,10 @@
 {
-    "require":
-    {
-        "twig/twig": "1.31.*"
+    "require": {
+        "twig/twig": "1.42.*"
     },
-    "autoload":
-    {
-        "psr-4":
-        {
-            "aitsydney\\" : "classes/"
+    "autoload":{
+        "psr-4": {
+          "aitsydney\\" : "classes/"
         }
     }
 }
